# peg-in-hole

./: .gitmodules  CMakeLists.txt  README.md
.kdev4/: peg-in-hole.kdev4
code/: CMakeLists.txt  README.md
code/peg-in-hole/: .project
code/peg-in-hole/cpp/: test-optimizer.bat
code/peg-in-hole/data/: friedman2_4d_500.arff
peg-in-hole/: .classpath  compile-sgpp-on-arch.sh  learnerConfig.json  object1.ini  results.xlsx  results_successful.arff  run.bat
peg-in-hole/cpp/: _compile.bat  _learn_and_optimize.bat  compile.bat  compile.sh  learnerSGDE_pih.cpp  optimize  optimize.cpp  results_successful.arff  sgde_opt.cpp  test-optimizer.bat  test-optimizer.sh
peg-in-hole/cpp/data/: l_40_s_05_496_8000.arff  l_40_s_06_652_8000.arff  l_60_s_06_133_8000.arff  l_60_s_08_330_8000.arff  l_60_s_09_426_8000.arff  l_80_s_24_643_64000.arff
peg-in-hole/data/: results_successful.arff  results_successful.mat  results_successful_positive.mat
peg-in-hole/src/core/: Constants.java  ControlPoints.java  Formulas.java  (+4 more)
source/: workspace.code-workspace
source/bezier_trajectory/: CMakeLists.txt  do_bezier_trajectory.cpp  eigen_utility.cpp  eigen_utility.h  gripper_pose.cpp  gripper_pose.h  kbhit.cpp  main.cpp  main_bezier.cpp  main_smooth_curve.cpp  motion_profile.cpp  motion_profile.h  path.cpp  path.h  trajectory_iterator.cpp  trajectory_iterator.h
source/bezier_trajectory/.kdev4/: bezier_trajectory.kdev4
source/bezier_trajectory/trajectory/: bezier_trajectory.cpp  bezier_trajectory.h  curve_smoothener.cpp  curve_smoothener.h  curve_trajectory.cpp  curve_trajectory.h  linear_trajectory.cpp  linear_trajectory.h  peg_in_hole_trajectory.cpp  peg_in_hole_trajectory.h  smooth_curve_trajectory.cpp  smooth_curve_trajectory.h  three_points_bezier_trajectory.cpp  three_points_bezier_trajectory.h  trajectory.cpp  trajectory.h
source/bezier_trajectory/trajectory_utility/: curve_smoothener.cpp  curve_smoothener.h  smooth_motion_profile.cpp  smooth_motion_profile.h  trajectory_iterator.cpp  trajectory_iterator.h
source/bezier_trajectory/utility/: curve_smoothener.cpp  curve_smoothener.h  gripper_pose.cpp  gripper_pose.h  smooth_motion_profile.cpp  trajectory_iterator.cpp  trajectory_iterator.h  trajectory_iterator_velocity.cpp  trajectory_iterator_velocity.h  trajectory_plotter.cpp  trajectory_plotter.h
students/: compile-sgpp-on-arch.sh  formula debug.xlsx  object1.ini  results.xlsx
students/cpp/: makefile  test-optimizer.sh
students/data/: friedman2_4d_2000.arff  results_all.mat
students/paper/: deflection_images.psd
(+476 files in other folders)
